--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <title>V Card</title>
 </head>
 <body>
-  <header class = 'name'>
-  </header>
-  <div class = 'info'>
-    <p class = 'myinfo'></p>
-    <p class = 'mybio'></p>
-    <img src="" alt="">
+  <div class ='cardbody'>
+  <div class ='header'>
+    <h1>Sarah Shuey</h1>
   </div>
+  <div class = 'info'>
+    <div class ='p1'>
+      <h2>The Basics</h2>
+    <dl class = 'myinfo'></dl>
+  </div>
+  <div class = 'p2'>
+    <h2>The Story</h2>
+    <p class = 'mybio'></p>
+  </div>
+    <div class = 'pic'>
+    </div>
+  </div>
+</div>
 <script src="main.js"></script>
 </body>
 </html>
